# Atlas

./: .codecov.yml  .coveragerc.old  .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  =2.10.3  ADAPTIVE_EXECUTION_IMPLEMENTATION_REPORT.md  ASYNC_UI_FIX_REPORT.md  ATLAS_CODE_ANALYSIS_IMPROVEMENTS.md  AUTO_CODING_README.md  AUTO_CODING_README_2.0.md  BUTTON_VISIBILITY_SOLUTION.md  CHANGELOG.md  CI_CD_SETUP_COMPLETE.md  CODE_QUALITY_COMPLETION_REPORT.md  COPY_ALGORITHM_EXPLANATION.md  DEV_PLAN.md  ENHANCED_SETTINGS_FIX_REPORT.md  FINAL_ENHANCED_SETTINGS_INSTRUCTIONS.md  FINAL_GROQ_SETUP_INSTRUCTIONS.md  FINAL_IMPROVEMENTS_REPORT.md  GROQ_SETUP_COMPLETE_REPORT.md  IMPROVEMENTS_IMPLEMENTED.md  INSTALLATION.md  INTELLIGENT_MODE_DETECTION_REPORT.md  INTUITIVE_ADAPTIVE_SYSTEM_REPORT.md  LINTING.md  MACOS_SETUP.md  Makefile  OPENAI_CLIENT_FIX_COMPLETE.md  ORGANIZATION.md  PHASE14_QUICKSTART.md  PHASE2_COMPLETION_REPORT.md  PHASE3_PROGRESS_REPORT.md  README.md  README_EN.md  README_HIERARCHICAL_PLANNING.md  SCROLLING_FIX_REPORT.md  SCROLLING_IMPROVEMENTS_REPORT.md  (+114 more)
.continue/: config.json
.github/: dependabot.yml
.windsurf/: AutoRecoveryExecutionEnhancements.md  AutonomousErrorRecoveryProtocols.md  ENVIRONMENT_SETUP.md  EnhancedPhase10Integration.md  INITIALIZATION.md  MacOSOptimizationProtocol.md  PHASE15_WORKFLOW_PLAN.md  PLATFORM_COMPATIBILITY.md  TaskExecutionPlan.md  TestFailureRecoveryProtocol.md  UnstoppableExecutionProtocol.md  WindsurfAutonomousDevelopmentProtocol.md  WindsurfContinuousExecutionTriggers.md
advanced_analytics/: ai_automation.py  ai_ethics.py  personalized_insights.py  predictive_analytics.py
agents/: __init__.py  adaptive_execution_manager.py  advanced_application_agent.py  agent_manager.py  application_agent.py  base_agent.py  browser_agent.py  chat_context_manager.py  chat_translation_manager.py  creator_authentication.py  creator_memory_manager.py  deputy_agent.py  email_strategy_manager.py  encrypted_creator_protocols.py  enhanced_deputy_agent.py  enhanced_memory_manager.py  enhanced_plugin_manager.py  enhanced_security_agent.py  hierarchical_plan_manager.py  llm_manager.py  master_agent.py  memory_manager.py  meta_agent.py  plugin_manager.py  problem_decomposition_agent.py  professional_analyzer.py  screen_agent.py  security_agent.py  self_learning_agent.py  self_regeneration_manager.py  system_interaction_agent.py  task_aware_master_agent.py  task_manager.py  task_planner_agent.py  text_agent.py  token_tracker.py  tool_creator_agent.py  tool_registry.py
analytics/: onboarding_analytics.py
app/: README.md  __init__.py
archive/: profiling_log.txt
assets/: icon.icns
backup_archive/: coverage.txt  master_agent_profile.pstats
backup_ui/: chat_history_view.py  chat_input_panel.py  chat_panel.py  context_menu.py  enhanced_plugin_manager.py  enhanced_settings.py  enhanced_settings_panel.py  fallback_chain_editor.py  goal_history.py  hierarchical_task_view.py  log_panel.py  master_agent_panel.py  performance_panel.py  plan_view.py  plugin_manager_panel.py  self_improvement_center.py  status_panel.py  tasks_panel.py  tool_management_view.py
backup_ui_qt/: agents_module.py  chat_module.py  consent_manager.py  decision_explanation.py  i18n.py  main_window.py  plugin_manager.py  plugin_marketplace_module.py  plugins_module.py  self_improvement_center.py  self_improvement_module.py  stats_module.py  system_control_module.py  tasks_module.py
chat/: __init__.py
collaboration/: __init__.py  collaboration.py  real_time_collaboration.py  real_time_collaboration_demo.py  real_time_collaboration_server.py  test_real_time_collaboration.py  test_real_time_collaboration_server.py  websocket_client.py  websocket_server.py
community/: engagement_plan.md  roadmap_draft.md
config/: ai_models.json  code_review_config.json  default.json  deployment_config.json  development.json  feature_flags.json  performance_config.json  production.json  schema.json  sentry_config.py
core/: __init__.py  __init__.py.backup  accessibility_compliance.py  ai_integration.py  alerting.py  api.py  application.py  async_task_manager.py  atlas_application.py  atlas_logging.py  cloud_sync.py  config.py  data_cache.py  event_bus.py  event_system.py  events.py  feature_flags.py  lazy_loader.py  logging.py  module_base.py  module_registry.py  module_system.py  monitoring.py  network_client.py  plugin_system.py  sanitize.py  sdk.py  self_healing.py  test_accessibility_compliance.py  workflow_manager.py
data/: atlas_final_report.json  atlas_performance_analysis.json  atlas_performance_focused.json  creator_memory.encrypted  final_report.py  memory_manager.py
debugging/: advanced_workflow_debugging.py  debugging_hooks.py  test_advanced_workflow_debugging.py
dev-tools/: .env.example  .gitleaks.toml  .ruff.toml  DEVELOPER_REMINDERS.md  FILE_STRUCTURE_REMINDER.md  README.md  analyze_performance.py  analyze_profile.py  check_file_structure.py  check_integration.py  check_protocols.py  check_quality.sh  clean_test_keys.py  compare_benchmarks.py  diagnose_atlas.py  diagnose_thinking_module.py  fix_config.py  fix_openai_config.py  focused_performance_analysis.py  generate_docs.py  monitor_performance.py  performance_profiler.py  profile_master_agent.py  pytest.ini
development/: ai_enhancements.md  collaboration_features.md  collaboration_realtime_plan.md  cross_platform_plan.md  feedback_analysis.md  post_launch_optimization.md
distribution/: distribution_plan.md  feedback_strategy.md  monitoring_plan.md
docs/: ADAPTIVE_EXECUTION_SYSTEM.md  CHANGELOG.md  CHAT_CONTEXT_RULES.md  CHAT_MEMORY_ANALYSIS.md  CREATOR_MEMORY_ANALYSIS.md  DEVELOPMENT_COMMANDS.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_README.md  DEV_PLAN.md  DOCS_INDEX.md  EMAIL_STRATEGY_SYSTEM.md  ENGLISH_ONLY_IMPLEMENTATION_SUMMARY.md  FINAL_MULTITASK_ANSWER.md  GMAIL_API_SETUP.md  HIERARCHICAL_PLANNING_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  MACOS_DISTRIBUTION.md  MACOS_SCREENSHOT_FIX.md  MEMORY_ANALYSIS.md  MODE_SYSTEM_IMPLEMENTATION_SUMMARY.md  MULTITASK_ANALYSIS.md  PLUGIN_SYSTEM.md  PROJECT_ORGANIZATION.md  TOOLS.md  (+42 more)
(+2036 files in other folders)
